fix z-index

--- a/css/index.css
+++ b/css/index.css
@@ -524,7 +524,7 @@ html {
 }
 #masthead.site-header {
   background-color: unset;
-  z-index: 1;
+  z-index: 10;
 }
 #masthead.site-header .inside-header {
   padding: 10px;
@@ -571,7 +571,7 @@ html {
   top: 0;
   width: 100%;
   background-color: #ecedf0;
-  z-index: 10;
+  z-index: 5;
   height: 60px;
 }
 #site-navigation.main-navigation .menu-toggle {
