--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,6 +1,6 @@
 #masthead.site-header {
   background-color: unset;
-  z-index: 1;
+  z-index: 10;
 
   .inside-header {
     padding: 10px;
